# bboy-analytics

./: .gitignore  ARCHITECTURE.md  EXPERIMENTS.md  KNOWLEDGE_MAP.md  Makefile  POC.md  PROGRESS.md  README.md  finish_pipeline.sh  josh_batch_job.sh  package.json  papers.yaml  pyproject.toml  run_josh_pipeline.sh  scenarios.json
experiments/: MANIFEST.md  PITCH_SUMMARY.md  analyze_powermove_root_cause.py  bcone_seq4_powermove_findings.md  benchmark_josh_brace.py  brace_integration_research.md  evaluate_powermove_gates.py  export_josh_2d.py  extract_2d.py  fetch_brace_assets.py  harness.py  josh_research_report.md  model_generations_evidence_map.md  person_lock.py  powermove_debug_report.py  powermove_research_consolidation.md  publication_figs.py  render_breakdown.py  render_combined.py  render_pitch.py  render_skeleton.py  render_spatial.py  render_timelines.py  render_trails.py  render_video.py  render_worldstate.py  statistics.py  synthetic_joints.py  world_state.py
fixtures/: cotracker3_oracle.json  cotracker3_reimpl.json  motionbert_oracle.json  motionbert_reimpl.json  sam3d_oracle.json  sam3d_reimpl.json  sam4d_oracle.json  sam4d_reimpl.json
guides/: COTRACKER3_REIMPL_GUIDE.md  MOTIONBERT_REIMPL_GUIDE.md  SAM3D_REIMPL_GUIDE.md
pipeline/: __init__.py  analyze.py  brace_assets.py  brace_benchmark.py  compare.py  config.py  extract.py  inference.py  josh_projection.py  powermove_debug.py  powermove_diagnostics.py  powermove_gates.py  powermove_root_cause.py  track_select.py
poc/: CLAUDE.md  Makefile  analyze.py  compare_josh_gvhmr.py
research/: checkpoint.ts  (+11 more)
(+161 files in other folders)
